javac should not place initializers of null restricted fields before the super invocation
Reviewed-by: liach